Fixed showing on narrow screen.

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 .form-shape {
   margin: auto;
   padding: 15px;
-  width: 30%;
+  width: fit-content;
   height: fit-content;
   border-radius: 12px 0;
   top: 50%;
